fixed filler z-index bug

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -392,7 +392,7 @@ footer.theme-dark {
   display: grid;
   grid-template-columns: 1.5fr 3fr 1.5fr;
   grid-template-rows: 1.5fr 3fr 1.5fr;
-  z-index: -1;
+  z-index: 0;
 }
 
 .svg {
